# wemcached

./: .gitignore  Makefile  Makefile.am  configure.in  configure.scan
etc/: config.ini
include/: defs.h  server.h
src/: Makefile  Makefile.am  Makefile.in  arguments.h  client.c  command.h  config.c  daemon.c  echo_server.c  server.c  server.h  wemcached  wemcached.c
src/include/: defs.h
