#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([wemcached],[0.1],[goby@foxmail.com])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(wemcached,0.1)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([event], [event_init])
# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdlib.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_FORK
AC_CHECK_FUNCS([dup2 socket])

AC_CONFIG_FILES([Makefile 
                src/Makefile])
AC_OUTPUT
